added some example

--- a/function-sample-0/src/main/resources/application.properties
+++ b/function-sample-0/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-#spring.cloud.function.stream.processor.name:uppercase
-#spring.cloud.function.scan.packages:com.example.functions
+## Filtering ineligible functions
+# spring.cloud.function.ineligible-definitions=foo,bar
+#
+#spring.cloud.function.scan.enabled=false
+spring.cloud.function.scan.packages=com.farhad.example.functionsample0.functions
